# wayback

./: .coveragerc  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  ChunkingDiffsFromPageFreezerAPI.py  DEVELOPER_DOCS.md  Data diff doc.ipynb  Data from different sources.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PROPOSALS.md  Pagefreezer diff service demo.ipynb  README.md  README.rst  ROADMAP.md  archive-layout.md  backend-demo.ipynb  circle.yml  conftest.py  deployment.md  dev-requirements.txt  diff_config.json  diff_config.json.example  docs-requirements.txt  environment.yml  github_deploy_key_edgi_govdata_archiving_web_monitoring_processing.enc  interactive.py  justfile  pagefreezer-api.md  pyproject.toml  (+8 more)
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: cd.yml
copied/: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  deployment.md  dev-requirements.txt  requirements.txt  run_tests.py  setup.py
copied/.circleci/: config.yml
copied/.github/: stale.yml
copied/docs/: issue_template.md
copied/docs/source/: conf.py  db_api.rst  index.rst  installation.rst
copied/web_monitoring/: __init__.py  _version.py  cli.py  content_type.py  diff_errors.py  diffing_server.py  filtering.py  links_diff.py
copied/web_monitoring/example_data/: add-list.after  change-href.before  change-word-in-paragraph.after  ins-in-source.after
copied/web_monitoring/tests/: test_db.py  test_differs.py  test_diffing_server_exc_handling.py  test_ia.py
docs/: Makefile  issue_template.md  make.bat  requirements.txt
docs/source/: cdx_api.rst  conf.py  data_sources.rst  db_api.rst  index.rst  installation.rst  release-history.rst  usage.rst  wayback.rst
docs/source/_static/: styles.css
docs/source/cassettes/: tutorial.yaml
get_article_text/: Dockerfile  app.py  readme.md  requirements.txt
hooks/: pre-commit
interface/: .gitignore  README.md  app.js  gulpfile.js  mockresponse.json  package.json  pagefreezer.php  tsconfig.json
interface/src/: index.html
interface/src/scripts/: Pagefreezer.js  Pagefreezer.js.map  Pagefreezer.ts  main.js  main.js.map  main.ts
interface/views/: main.html
interface/views/parts/: footer.ejs  header.ejs  tools.ejs
page_freezer_python_module/: PageFreezer.ipynb  PageFreezer.py  README.md  diff_output.html  example.json
scripts/: ia_healthcheck  ia_healthcheck.py  wm  wm-diffing-server
src/wayback/: __init__.py  _client.py  _http.py  _models.py  _utils.py  exceptions.py
src/wayback/tests/: conftest.py  support.py  test_client.py  test_models.py  test_utils.py  urllib3_mock.py
wayback/: __init__.py  _client.py  _models.py  _utils.py  _version.py  exceptions.py
wayback/tests/: support.py  test_client.py  test_utils.py
wayback/tests/cassettes/: test_get_memento  test_get_memento.urllib3v1.yaml  test_get_memento.urllib3v2.yaml  test_get_memento_follow_redirects_does_not_follow_historical_redirects  test_get_memento_follow_redirects_does_not_follow_historical_redirects.urllib3v2.yaml  test_get_memento_follows_historical_redirects  test_get_memento_follows_historical_redirects.urllib3v2.yaml  test_get_memento_handles_non_utc_datetime  test_get_memento_handles_non_utc_datetimes  test_get_memento_raises_blocked_error  test_get_memento_raises_blocked_error.urllib3v2.yaml  test_get_memento_raises_for_mementos_that_redirect_in_a_loop  test_get_memento_raises_for_mementos_that_redirect_in_a_loop.urllib3v2.yaml  test_get_memento_raises_no_memento_error  test_get_memento_raises_no_memento_error.urllib3v2.yaml  test_get_memento_raises_when_memento_is_outside_target_window  test_get_memento_raises_when_memento_is_outside_target_window.urllib3v1.yaml  test_get_memento_raises_when_memento_is_outside_target_window.urllib3v2.yaml  test_get_memento_returns_memento_with_accurate_url  test_get_memento_returns_memento_with_accurate_url.urllib3v2.yaml  test_get_memento_should_fail_for_non_playbackable_mementos  test_get_memento_should_fail_for_non_playbackable_mementos.urllib3v1.yaml  test_get_memento_should_fail_for_non_playbackable_mementos.urllib3v2.yaml  test_get_memento_target_window  test_get_memento_target_window.urllib3v2.yaml  test_get_memento_with_archive_url  test_get_memento_with_archive_url.urllib3v2.yaml  test_get_memento_with_cdx_record  test_get_memento_with_date_date  test_get_memento_with_date_datetime  test_get_memento_with_date_datetime.urllib3v2.yaml  test_get_memento_with_inexact_string_datetime  test_get_memento_with_inexact_string_datetime.urllib3v2.yaml  (+44 more)
web_monitoring/: Cache Test.ipynb  Filter Test.ipynb  Test File.csv  __init__.py  app.py  cli.py  content_type.py  db.py  diff_errors.py  differs.py  diffing_server.py  filtering.py  html_diff_render.py  internetarchive.py  internetarchive_alt.py  links_diff.py  pagefreezer.py  pf_edgi.py  utils.py
web_monitoring/example_data/: add-paragraph.after  add-paragraph.before  change-href.after  change-href.before  change-link-text.after  change-link-text.before  change-list-text.after  change-tag.after  change-tag.before  change-title.after  change-title.before  change-word-in-paragraph.before  ins-in-source.before  remove-list.after  two-paragraphs.after  two-paragraphs.before
web_monitoring/tests/: htmldiff_test.txt  test_cli.py  test_db.py  test_differs.py  test_diffing_server_exc_handling.py  test_html_diff.py  test_html_diff_validity.py  test_ia.py  test_links_diff.py  test_pf.py  test_pf_edgi.py  test_utils.py
(+63 files in other folders)
