[project]
name = "wayback"
# version = "0.0.1"
dynamic=["version"]
description = "Python API to Internet Archive Wayback Machine"
readme = "README.rst"
maintainers = [
  { name = "Rob Brackett", email = "rob@robbrackett.com" },
  { name="Environmental Data Governance Initiative", email="EnviroDGI@protonmail.com" },
]
# TODO: put contributors in `authors` field?
#   authors = [ { name="XYZ" }, ... ]
license = {text = "BSD (3-clause)"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    # It would be nice to have a license classifier here, but there isn't one:
    # https://github.com/pypa/trove-classifiers/issues/70
]
dependencies = [
  "requests",
  "urllib3>=1.20",
]

[project.optional-dependencies]
# For developing the package (running tests, packaging, etc.) but not needed
# for _using_ it. Some tooling requires newer Python versions than the package
# itself (>=3.8). This depends on the `test` extra, which _does_ work on the
# same Python versions as the main package source.
dev = [
    "build ~=1.3.0",
    "check-wheel-contents ~=0.6.0",
    "flake8 ~=7.3.0",
    "wayback[test]"
]
# For building documentation. These are separated from dev because there are a
# a variety of compatibility issues with our other dev dependencies on Python
# versions < 3.10 (which we support), so you have to install them in a separate
# environment from the other dev dependencies.
docs = [
    "sphinx ~=7.2.6",
    "ipython ~=8.16.1",
    "numpydoc ~=1.10.0",
    "sphinx-copybutton ~=0.5.2",
    "sphinx_rtd_theme ~=1.3.0",
]
# For running tests.
test = [
    "codecov",
    "coverage",
    "requests-mock",
    "pytest",
    "vcrpy",
]

[project.urls]
"Homepage" = "https://github.com/edgi-govdata-archiving/wayback"
"Documentation" = "https://wayback.readthedocs.io/en/stable/"
"Changelog" = "https://wayback.readthedocs.io/en/stable/release-history.html"
"Source code" = "https://github.com/edgi-govdata-archiving/wayback"
"Issues" = "https://github.com/edgi-govdata-archiving/wayback/issues"

[build-system]
requires = ["hatchling ~=1.19", "hatch-vcs ~=0.4"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/wayback/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/wayback"]
exclude = ["src/wayback/tests/*"]

[tool.check-wheel-contents]
toplevel = "wayback"
